@@ -1,6 +1,7 @@
 package com.benbenlaw.casting.block.entity;
 
 import com.benbenlaw.casting.item.CastingDataComponents;
+import com.benbenlaw.casting.item.util.FluidListComponent;
 import com.benbenlaw.casting.recipe.CoolantRecipe;
 import com.benbenlaw.casting.recipe.SolidifierRecipe;
 import com.benbenlaw.casting.screen.SolidifierMenu;
@@ -489,17 +490,18 @@ public class SolidifierBlockEntity extends BlockEntity implements MenuProvider, 
 
         FluidStack fluid = this.TANK.getFluid();
         if (!fluid.isEmpty()) {
-            builder.set(CastingDataComponents.FLUIDS, List.of(fluid.copy()));
+            builder.set(CastingDataComponents.FLUIDS, new FluidListComponent(List.of(fluid.copy())));
         }
     }
 
     @Override
     protected void applyImplicitComponents(DataComponentInput input) {
         super.applyImplicitComponents(input);
-        List<FluidStack> fluids = input.get(CastingDataComponents.FLUIDS);
-        if (fluids != null && !fluids.isEmpty()) {
-            this.TANK.setFluid(fluids.getFirst().copy());
+        FluidListComponent component = input.get(CastingDataComponents.FLUIDS);
+        if (component != null && !component.fluids().isEmpty()) {
+            this.TANK.setFluid(component.fluids().get(0).copy());
         }
     }
+
 
 }
